Improving View-controller and simple command processing